--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "refferal-rich",
-  "version": "1.0.0",
-  "description": "",
+  "name": "futureiqra-backend",
+  "version": "1.1.0",
+  "description": "server for futureiqra",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,6 +19,7 @@
     "mongoose": "^7.5.3",
     "mongoose-paginate-v2": "^1.8.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.11",
     "serverless-http": "^3.2.0"
   }
 }
