--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "server for futureiqra",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +21,7 @@
     "mongoose": "^7.5.3",
     "mongoose-paginate-v2": "^1.8.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.11",
     "serverless-http": "^3.2.0"
   }
